# 42_malloc

./: .gitignore  CMakeLists.txt  Makefile  free_test.c  run.sh
libft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_itoa.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_printf.c  ft_putnbr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h
src/: free.c  main.c  malloc.c  malloc.h  realloc.c  show_alloc_mem.c  utils.c
test/: main.c  test_malloc
